add the search text reset

--- a/Eshop/index.html
+++ b/Eshop/index.html
@@ -33,7 +33,7 @@
 		<h1 title="Ecommerc website"><a href="#"><img src="img/logo.png" alt="logo"></a></h1>
 		<div class="Search">
 			<form action="">
-				<input class="Text" type="text" value="Search Website">
+				<input id="sTextUp" class="Text" type="text" value="Search Website">
 				<input class="Button" type="submit" value="">
 			</form>		
 		</div>
@@ -262,7 +262,7 @@ email enquiries</li>
 				<p class="document">We ship your orders anywhere!</p>
 				<div class="Search">
 					<form action="">
-						<input class="Text" type="text" value="Search Website">
+						<input id="sTextDown" class="Text" type="text" value="Search Website">
 						<input class="Button" type="submit" value="">
 					</form>	
 				</div>
