add three-column-layout used the position

--- a/IFE/task01/task01_03position.html
+++ b/IFE/task01/task01_03position.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>练习task01_03float</title>
+	<title>练习task01_03position</title>
 	<link rel="icon" href="img/icon.ico">
-	<link rel="stylesheet" href="css/style01_03_float.css">
+	<link rel="stylesheet" href="css/style01_03_position.css">
 </head>
 <body>
-		<div id="context" class="bg_border bg_padding bg_color">
+		<div id="context" class="clearfix bg_border bg_padding bg_color">
 			<div id="team" class="bg_border">
 				<a href="https://github.com"><img src="img/github.jpg" alt="IFE-chanllege"></a>
 				<p><span>IFE<br>Chanllege</span></p>
@@ -21,34 +21,44 @@
 					<li class="bg_padding"><a href="https://github.com/insistcat"><img src="img/insistcat.jpg" alt="insistcat"></a></li>
 				</ul>
 			</div>
-			<div id="container" class="clearfix bg_border bg_padding">
+			<div id="container" class="bg_border bg_padding">
 				<p><span>Q1:</span>你们是谁？</p>
 				<p><span>A1：</span>我们是一群有热情有动力，愿意为前端花费时间的初学者。</p>
 				<section>
-					<div class="intro clearfix">
+					<div class="introCon">
 						<img src="img/ehai.png" alt="ehai">
-					<p><span>Name:&nbsp;</span>echai<br>
-					<span>GitHub:&nbsp;</span><a href="https://github.com/ehai">https://github.com/ehai</a></p>
+						<div class="introInfo">
+							<p><span>Name:&nbsp;</span>echai<br>
+							<span>GitHub:&nbsp;</span><a href="https://github.com/ehai">https://github.com/ehai</a></p>
+						</div>
 					</div>	
-					<div class="intro clearfix">
+					<div class="introCon">
 						<img src="img/huliang216.png" alt="huliang216">
-					<p><span>Name:&nbsp;</span>huliang216<br>
-					<span>GitHub:&nbsp;</span><a href="https://github.com/huliang216">https://github.com/huliang216</a></p>
+						<div class="introInfo">
+							<p><span>Name:&nbsp;</span>huliang216<br>
+							<span>GitHub:&nbsp;</span><a href="https://github.com/huliang216">https://github.com/huliang216</a></p>	
+						</div>
 					</div>
-					<div class="intro clearfix">
+					<div class="introCon">
 						<img src="img/nitta-honoka.jpg" alt="nitta-honoka">
-					<p><span>Name:&nbsp;</span>nitta-honoka<br>
-					<span>GitHub:&nbsp;</span><a href="https://github.com/nitta-honoka">https://github.com/nitta-honoka</a></p>
+						<div class="introInfo">
+							<p><span>Name:&nbsp;</span>nitta-honoka<br>
+							<span>GitHub:&nbsp;</span><a href="https://github.com/nitta-honoka">https://github.com/nitta-honoka</a></p>
+						</div>
 					</div>
-					<div class="intro clearfix">
+					<div class="introCon">
 						<img src="img/ppmeng.jpg" alt="ppmeng">
-					<p><span>Name:&nbsp;</span>ppmeng<br>
-					<span>GitHub:&nbsp;</span><a href="https://github.com/ppmeng">https://github.com/ppmeng</a></p>
+						<div class="introInfo">
+							<p><span>Name:&nbsp;</span>ppmeng<br>
+							<span>GitHub:&nbsp;</span><a href="https://github.com/ppmeng">https://github.com/ppmeng</a></p>		
+						</div>
 					</div>
-					<div class="intro clearfix">
+					<div class="introCon">
 						<img src="img/insistcat.jpg" alt="insistcat">
-					<p><span>Name:&nbsp;</span>insistcat<br>
-					<span>GitHub:&nbsp;</span><a href="https://github.com/insistcat">https://github.com/insistcat</a></p>
+						<div class="introInfo">
+							<p><span>Name:&nbsp;</span>insistcat<br>
+							<span>GitHub:&nbsp;</span><a href="https://github.com/insistcat">https://github.com/insistcat</a></p>		
+						</div>
 					</div>				
 				</section>
 				<p><span>Q1:</span>为什么组成一个队？</p>
