--- a/IFE/task01/task01_03float.html
+++ b/IFE/task01/task01_03float.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/style01_03_float.css">
 </head>
 <body>
-		<div id="context" class="bg_border bg_padding bg_color">
+		<div id="context" class="clearfix bg_border bg_padding bg_color">
 			<div id="team" class="bg_border">
 				<a href="https://github.com"><img src="img/github.jpg" alt="IFE-chanllege"></a>
 				<p><span>IFE<br>Chanllege</span></p>
@@ -21,7 +21,7 @@
 					<li class="bg_padding"><a href="https://github.com/insistcat"><img src="img/insistcat.jpg" alt="insistcat"></a></li>
 				</ul>
 			</div>
-			<div id="container" class="clearfix bg_border bg_padding">
+			<div id="container" class="bg_border bg_padding">
 				<p><span>Q1:</span>你们是谁？</p>
 				<p><span>A1：</span>我们是一群有热情有动力，愿意为前端花费时间的初学者。</p>
 				<section>
