--- a/ife2017/小薇学院/task2.html
+++ b/ife2017/小薇学院/task2.html
@@ -6,118 +6,124 @@
 	<link rel="stylesheet" href="css/task02.css">
 </head>
 <body>
-	<div class="contain">
-		<nav class="page clearfix">
-			<img src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo_top_ca79a146.png" alt="logo">
-			<ul>
-				<li><a href="#">导航链接一</a></li>
-				<li><a href="#">导航链接二</a></li>
-				<li><a href="#">导航链接三</a></li>
-				<li><a href="#" class="active">导航链接四</a></li>
-			</ul>
-		</nav>
-		<div class="article">
-			<h2>文章一级标题</h2>
-			<h3>文章二级标题</h3>
-			<p class="writer">文章作者&nbsp;&nbsp;&nbsp;&nbsp;文章发表时间</p>
-			<div class="content">				
-				&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。<a href="http://ife.baidu.com/course/detail/id/90" target="_blank">这里有一个超链接</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
-				<br>
-				这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。		
-				<br>
-				<img src="img/tw.png" alt="汤唯"><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。换行了<strong>这里有个粗体字</strong>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
-			</div>
+	<div class="page">
+		<div class="contain">
+			<nav>
+				<img src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/img/logo_top_ca79a146.png" alt="logo">
+				<ul>
+					<li><a href="#">导航链接一</a></li>
+					<li><a href="#">导航链接二</a></li>
+					<li><a href="#">导航链接三</a></li>
+					<li><a href="#" class="active">导航链接四</a></li>
+				</ul>			
+			</nav>			
 		</div>
-		<div class="article">
-			<h2>另一篇文章一级标题</h2>
-			<h3>文章二级标题</h3>
-			<p class="writer">文章作者&nbsp;&nbsp;&nbsp;&nbsp;文章发表时间</p>
-			<div class="content">
-				&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。<a href="http://ife.baidu.com/course/detail/id/90" target="_blank">这里有一个超链接</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
-				<br>
-				这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。		
-				<br>
-				<img src="img/tw.png" alt="汤唯"><br>
-				&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。换行了<strong>这里有个粗体字</strong>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
-			</div>
-			<ul>
-				<li><a href="#">列表项目一</a></li>
-				<li><a href="#">列表项目二</a></li>
-				<li><a href="#">列表项目三</a></li>
-			</ul>
-		</div>
-		<div class="article">
-			<h2>图片</h2>
-			<ul class="images">
-				<li>
-					<p>好看的图片</p>
-					<a href=""><img src="img/tw.png" alt="汤唯"></a>
-				</li>
-				<li>
-					<p>好看的图片</p>
-					<a href=""><img src="img/tw.png" alt="汤唯"></a>
-				</li>
-				<li>
-					<p>好看的图片</p>
-					<a href=""><img src="img/tw.png" alt="汤唯"></a>
-				</li>
-				<li>
-					<p>好看的图片</p>
-					<a href=""><img src="img/tw.png" alt="汤唯"></a>
-				</li>
-				<li>
-					<p>好看的图片</p>
-					<a href=""><img src="img/tw.png" alt="汤唯"></a>
-				</li>
-			</ul>
-		</div>		
-		<div class="article">
-			<h2>最后一篇文章一级标题</h2>
-			<h3>文章二级标题</h3>
-			<p class="writer">文章作者&nbsp;&nbsp;&nbsp;&nbsp;文章发表时间</p>
-			<div>
-				<ol>
-					<li><a href="#">排名1</a></li>
-					<li><a href="#">排名2</a></li>
-					<li><a href="#">排名3</a></li>
-				</ol>
-				<p>下面是个表格，给表格加了border=“1”，能看出是个表格</p>
-				<table>
-					<tr>
-						<th>表头</th>
-						<th>表头</th>
-						<th>表头</th>
-					</tr>
-					<tr>
-						<td>表内容单元格</td>
-						<td>表内容单元格</td>
-						<td><a href="#">操作</a></td>
-					</tr>
-					<tr>
-						<td>表内容单元格</td>
-						<td>表内容单元格</td>
-						<td><a href="#">操作</a></td>
-					</tr>
-					<tr>
-						<td>表内容单元格</td>
-						<td>表内容单元格</td>
-						<td><a href="#">操作</a></td>
-					</tr>
-					<tr>
-						<td>表内容单元格</td>
-						<td>表内容单元格</td>
-						<td><a href="#">操作</a></td>
-					</tr>										
-					<tr>
-						<td>总计</td>
-						<td colspan="2">1000</td>
-					</tr>
-				</table>
-			</div>
-		</div>		
 	</div>
-	<div class="contain">
+	<div class="contain">		
+		<div class="left">
+			<div class="article">
+				<h2>文章一级标题</h2>
+				<h3>文章二级标题</h3>
+				<p class="writer">文章作者&nbsp;&nbsp;&nbsp;&nbsp;文章发表时间</p>
+				<div class="content">				
+					&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。<a href="http://ife.baidu.com/course/detail/id/90" target="_blank">这里有一个超链接</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
+					<br>
+					这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。		
+					<br>
+					<img src="img/tw.png" alt="汤唯"><br>
+					&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。换行了<strong>这里有个粗体字</strong>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
+				</div>
+			</div>
+			<div class="article">
+				<h2>另一篇文章一级标题</h2>
+				<h3>文章二级标题</h3>
+				<p class="writer">文章作者&nbsp;&nbsp;&nbsp;&nbsp;文章发表时间</p>
+				<div class="content">
+					&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。<a href="http://ife.baidu.com/course/detail/id/90" target="_blank">这里有一个超链接</a>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
+					<br>
+					这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。		
+					<br>
+					<img src="img/tw.png" alt="汤唯"><br>
+					&nbsp;&nbsp;&nbsp;&nbsp;这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。换行了<strong>这里有个粗体字</strong>这是一个很长的段落，这是一个很长的段落，这是一个很长的段落，这是一个很长的段落。
+				</div>
+				<ul>
+					<li><a href="#">列表项目一</a></li>
+					<li><a href="#">列表项目二</a></li>
+					<li><a href="#">列表项目三</a></li>
+				</ul>
+			</div>
+			<div class="article">
+				<h2>图片</h2>
+				<ul class="images">
+					<li>
+						<p>好看的图片</p>
+						<a href=""><img src="img/tw.png" alt="汤唯"></a>
+					</li>
+					<li>
+						<p>好看的图片</p>
+						<a href=""><img src="img/tw.png" alt="汤唯"></a>
+					</li>
+					<li>
+						<p>好看的图片</p>
+						<a href=""><img src="img/tw.png" alt="汤唯"></a>
+					</li>
+					<li>
+						<p>好看的图片</p>
+						<a href=""><img src="img/tw.png" alt="汤唯"></a>
+					</li>
+					<li>
+						<p>好看的图片</p>
+						<a href=""><img src="img/tw.png" alt="汤唯"></a>
+					</li>
+				</ul>
+			</div>		
+			<div class="article">
+				<h2>最后一篇文章一级标题</h2>
+				<h3>文章二级标题</h3>
+				<p class="writer">文章作者&nbsp;&nbsp;&nbsp;&nbsp;文章发表时间</p>
+				<div>
+					<ol>
+						<li><a href="#">排名1</a></li>
+						<li><a href="#">排名2</a></li>
+						<li><a href="#">排名3</a></li>
+					</ol>
+					<p>下面是个表格，给表格加了border=“1”，能看出是个表格</p>
+					<table>
+						<tr>
+							<th>表头</th>
+							<th>表头</th>
+							<th>表头</th>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><a href="#">操作</a></td>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><a href="#">操作</a></td>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><a href="#">操作</a></td>
+						</tr>
+						<tr>
+							<td>表内容单元格</td>
+							<td>表内容单元格</td>
+							<td><a href="#">操作</a></td>
+						</tr>										
+						<tr>
+							<td>总计</td>
+							<td colspan="2">1000</td>
+						</tr>
+					</table>
+				</div>
+			</div>								
+		</div>
+	</div>
+	<div class="contain clearfix">
 		<div class="right">
 			<h2>这里以后是个侧栏，这里是侧栏标题</h2>
 			<form action="">
@@ -171,7 +177,7 @@
 					<tr>
 						<td><p>个人描述：</p></td>
 						<td>
-							<textarea name="textarea" id="" cols="40" rows="8">这是一个文本框，用来做个人介绍啊</textarea>
+							<textarea name="textarea" id="" cols="40" rows="6">这是一个文本框，用来做个人介绍啊</textarea>
 						</td>
 					</tr>								
 				</table>
