--- a/ife2017/小薇学院/垂直居中.html
+++ b/ife2017/小薇学院/垂直居中.html
@@ -5,20 +5,42 @@
 	<title>垂直居中</title>
 	<style>
 	.father{width: 300px;height: 300px;background-color: #eee;}
-	/* 单行文本 ，可用padding
-	.child{padding:130px 0px;height: 40px;line-height: 40px;}
-	 单行文本 且不换行
-	.child{line-height: 300px;height: 300px;}
-	多行文本居中，table，table-cell
-	.one{display: table;}
-	.child{display: table-cell;vertical-align: middle;}
-	多行文本，flex
-	.one{display: flex;justify-content: center;flex-direction:column;}*/
+	.bg_color{background-color: #000;color:#fff;}
+	/* ----------子元素为行内元素---------- */
+	/* 单行文本 ，可用padding*/
+	/* .child{padding:130px 0px;height: 40px;line-height: 40px;}*/
+
+	/* 单行文本 且不换行*/
+	/* .child{line-height: 300px;height: 300px;}*/
+
+	/* 多行文本居中，table，table-cell*/
+	/* .one{display: table;}
+	.child{display: table-cell;vertical-align: middle;}*/
+
+	/* 多行文本，flex*/
+	/* .one{display: flex;justify-content: center;flex-direction:column;}*/
+
+	/* 多行文本，用一个全高的伪类*/
+	/* 	.one{position: relative;}
+	.one::before{content: '';display:inline-block;height: 100%;width: 1%;vertical-align: middle;}
+	.child{display: inline-block;vertical-align: middle;width: 200px;} */
+
+	/* ----------子元素为块级元素---------- */	
+	/* 已知高度*/
+	/* 	.one{position: relative;} 
+	.child{position: absolute;top: 50%;height: 200px;margin-top: -100px;} */
+
+	/* 未知高度 ,treanslate*/
+	/* 	.one{position: relative;}
+	.child{position: absolute;top: 50%;transform:translateY(-50%);} */
+
+	/* 未知高度 ,flex*/
+	/* .one{display: flex;justify-content:center;flex-direction:column;} */
 	</style>
 </head>
 <body>
 	<div class="father one">
-		<p class="child">这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中</p>	
+		<p class="child bg_color">这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中这是垂直居中</p>	
 	</div>
 </body>
 </html>
