--- a/ife2017/小薇学院/task9.html
+++ b/ife2017/小薇学院/task9.html
@@ -336,9 +336,7 @@
 									<tr>
 										<td colspan="2" class="fouth_border">
 											<span>详细描述</span>
-											<textarea name="" id="" cols="50" rows="5">
-												该项目的负责人是.......
-											</textarea>										
+											<textarea name="" id="" cols="40" rows="5">该项目的负责人是.......</textarea>										
 										</td>
 									</tr>
 									<tr>
