--- a/ife2017/小薇学院/task12.html
+++ b/ife2017/小薇学院/task12.html
@@ -2,9 +2,65 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
 	<title>task12</title>
+	<link rel="stylesheet" href="css/task12.css">
 </head>
 <body>
-	
+	<div class="page">
+		<table>
+			<thead>
+				<tr>
+					<td>排名</td>
+					<td>网站</td>
+					<td>热度</td>
+				</tr>			
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>百度前端</td>
+					<td>18760</td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td>百度前端</td>
+					<td>18760</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td>百度前端</td>
+					<td>18760</td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td>百度前端</td>
+					<td>18760</td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td>百度前端</td>
+					<td>18760</td>
+				</tr>
+				<tr>
+					<td>6</td>
+					<td>百度前端</td>
+					<td>18760</td>
+				</tr>			
+			</tbody>		
+		</table>
+		<div class="tip">
+			<input type="text">			
+			<input type="text">				
+		</div>
+		<div class="change" id="main">
+			<div id="tab1"></div>
+			<div class="tab1"><a href="#tab1">1</a></div>
+			<div id="tab2"></div>
+			<div class="tab2"><a href="#tab2">2</a></div>
+			<div id="tab3"></div>
+			<div class="tab3"><a href="#tab3">3</a></div>						
+		</div>	
+	</div>
 </body>
 </html>
