正序和倒序排列

--- a/ife2017/斌斌学院/task03.html
+++ b/ife2017/斌斌学院/task03.html
@@ -17,9 +17,13 @@
 		<li>成都空气质量：<b>90</b></li>
 		<li>长沙空气质量：<b>88</b></li>
 	</ul>
-	<ul id="resort">
+	<ul id="resort1">
 		
 	</ul>
-	<button id="sort-btn">重新排序</button>
+	<ul id="resort2">
+		
+	</ul>
+	<button id="sort-btn1">正序</button>
+	<button id="sort-btn2">倒序</button>
 </body>
 </html>
