--- a/ife2017/斌斌学院/task07.html
+++ b/ife2017/斌斌学院/task07.html
@@ -5,31 +5,31 @@
 	<title>task07</title>
 	<script type="text/javascript" src="js/task07.js"></script>
 	<style>
-	div{border:1px solid #ccc;padding:20px;display: flex;margin:20px;justify-content:space-around;background-color: #fff;}
+	div{border:1px solid #ccc;padding:10px;display: flex;margin:20px;justify-content:space-around;background-color: #fff;}
 	.active{background-color: blue;}
 	button{}
 	</style>
 </head>
 <body>
-	<div id="root">
-		<div>
-			<div>
-				<div></div>
-				<div></div>
+	<div id="root">root
+		<div id="00">00
+			<div id="01">01
+				<div id="010">010</div>
+				<div id="011">011</div>
 			</div>
-			<div>
-				<div></div>
-				<div></div>
+			<div id="02">02
+				<div id="020">020</div>
+				<div id="021">021</div>
 			</div>
 		</div>
-		<div>
-			<div>
-				<div></div>
-				<div></div>
+		<div id="10">10
+			<div id="11">11
+				<div id="110">110</div>
+				<div id="111">111</div>
 			</div>
-			<div>
-				<div></div>
-				<div></div>
+			<div id="12">12
+				<div id="120">120</div>
+				<div id="121">121</div>
 			</div>
 		</div>
 	</div>
